--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -305,6 +305,8 @@ footer .thumb-md {
   margin-left: 40px;
   font-size: 20px;
   font-weight: 700;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-style: italic;
 }
 
 .dropdown-menu {
