--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -1,4 +1,5 @@
 @import '../../bower_components/bootstrap/less/bootstrap';
+@import '../../bower_components/components-font-awesome/less/font-awesome';
 @import '../../bower_components/toastr/toastr';
 @import (less) '../../bower_components/magnific-popup/dist/magnific-popup.css';
 
